--- a/instructions.html
+++ b/instructions.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %}
 {% block title %}PRADPT1 - Part {{part}} Instructions{% endblock %}
-{% block content %}{% include "list1_instructions.html" %}{% endblock %}
+{% block content %}{% include "list1_instructions.html"|replace('1', part) %}{% endblock %}
