A hodgepodge of changes along the way. Commiting so I can check out current (broken) state from home

--- a/instructions.html
+++ b/instructions.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %}
 {% block title %}PRADPT1 - Part {{part}} Instructions{% endblock %}
-{% block content %}{% include "list1_instructions.html"|replace('1', part) %}{% endblock %}
+{% block content %}{% include "partXXX_instructions.html"|replace('XXX', part) %}{% endblock %}
