--- a/preview.html
+++ b/preview.html
@@ -1,3 +1,17 @@
 {% extends "base.html" %}
-{% block title %}PRADPT1 - Preview{% endblock %}
-{% block content %}Just a preview{% endblock %}
+{% block title %}Experiment PRADPT1 - Preview{% endblock %}
+{% block content %}
+<h3>Experiment PRADPT1 - Preview</h3>
+<p>Your input will help us to understand how our brain processes and produces language.  In order to participate in this experiment, you need to be a native speaker of American English (i.e. you must have moved to the U.S. before the age of 6 and you must have lived there most of your life).</p>
+
+<p>Payment is progressive, so that this task is really worth it if you complete all parts.</p>
+
+<p>This experiment has three parts which need to be taken on SPECIFIC days over the next 5 days (which days you will be told later). While you can choose during which time of the day to take them, please only accept this HIT if you can make sure that you could complete a task between 30-60 minutes on any of three days within the next 5 days.</p>
+
+<p>Here's a quick overview of the three parts:</p>
+<ul>
+    <li>Part 1: You will describe about 60-80 simple pictures (one sentence each).</li>
+    <li>Part 2: You will read 80 short excerpt from transcribed dialogues about a variety of topics and answer questions about the content of these excerpts.</li>
+    <li>Part 3: You will describe another 60-80 simple picture (one sentence each).</li>
+</ul>
+{% endblock %}
