Lots of progress. Too much of a hurry to specify

--- a/part1_instructions.html
+++ b/part1_instructions.html
@@ -15,7 +15,7 @@
 <ul>
     <li>Please take Part 1 today ($2 for about 30 minutes)</li>
     <li>Please take Part 2 in two days, i.e. after one intervening day ($6 for about 1 hour).</li>
-    <li>Please take Part 3 {% if triallist == 1 %}IMMEDIATELY (WITHIN 5 MINUTES){% else %}TWO DAYS{% endif %} after Part 2 ($7 for about 30 minutes)</li>
+    <li>Please take Part 3 {% if now == true %}IMMEDIATELY (WITHIN 5 MINUTES){% else %}TWO DAYS{% endif %} after Part 2 ($7 for about 30 minutes)</li>
 </ul>
 
 <p>You will be reminded after each part of the experiment what you need to do next. It is important that you complete the parts in the order and the schedule given above since we will not be able to use the data provided by you otherwise. At the end of each part of the experiment you will be given a code to paste into the HIT on Mechanical Turk to verify that you completed that part. This code will also be required in order to be allowed to do the next part of the experiment.</p>
