Removed separate instruction and experiemnt phases. Need to use JS to hide experiment part initially and instructions after ticking consent box

--- a/base.html
+++ b/base.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        {% block instructions %}{% endblock %}
         <div id="content">{% block content %}{% endblock %}</div>
         {% block form %}{% endblock %}
     </body>
