Some changes to the templates and JS

--- a/part1_instructions.html
+++ b/part1_instructions.html
@@ -18,8 +18,8 @@
     <li>Please take Part 3 {% if now == true %}IMMEDIATELY (WITHIN 5 MINUTES){% else %}TWO DAYS{% endif %} after Part 2 ($7 for about 30 minutes)</li>
 </ul>
 
-<p>You will be reminded after each part of the experiment what you need to do next. It is important that you complete the parts in the order and the schedule given above since we will not be able to use the data provided by you otherwise. At the end of each part of the experiment you will be given a code to paste into the HIT on Mechanical Turk to verify that you completed that part. This code will also be required in order to be allowed to do the next part of the experiment.</p>
+<p>You will be reminded after each part of the experiment what you need to do next. It is important that you complete the parts in the order and the schedule given above since we will not be able to use the data provided by you otherwise.<!--At the end of each part of the experiment you will be given a code to paste into the HIT on Mechanical Turk to verify that you completed that part. This code will also be required in order to be allowed to do the next part of the experiment.--></p>
 
-<p>Before you proceed, please take a moment to read our consent form (we have to provide this to you for each part of the experiment):</p>
+<p>Before you proceed, please take a moment to read our consent form (we have to provide this to you for each part of the experiment). As soon as you check the box, these instructions will disappear and the experiment will start. Please make sure you've read the instructions and consent form carefully before you start:</p>
 <p><input type="checkbox" name="consent" id="consentcx" /><label for="consentcx">I have read and understood <a target="_blank" href="http://www.hlp.rochester.edu/consent/English_2011-05-13.pdf">the consent form</a>. I am at least 18 years of age and a native speaker of English.</label></p>
 
